Issue #2244 - fixed position of label box on small screen

--- a/webcompat/static/css/src/label-box.css
+++ b/webcompat/static/css/src/label-box.css
@@ -7,6 +7,12 @@
   }
 }
 
+@media all and (max-width: 664.99px) {
+  .label-box {
+    order: 0;
+  }
+}
+
 .grid-cell.x1.label-box {
   padding: 0;
 }
